add dependencies to package.json and start index.js with variables and promptQuestions() function

--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/AF-cmdZ/README_generator/issues"
   },
-  "homepage": "https://github.com/AF-cmdZ/README_generator#readme"
+  "homepage": "https://github.com/AF-cmdZ/README_generator#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "inquirer": "^8.1.1",
+    "util": "^0.12.4"
+  }
 }
